--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ sux/
 /node_modules/sharp/vendor/8.14.5/win32-x64/include/orc-0.4/orc
 /node_modules/sharp/vendor/8.14.5/win32-x64/include
 /node_modules
+data/output.wav
+data/sample.wav
+data/sample1.mp3
+data/sample3.mp3
